# prism-echo

./: README.md
backend/: .env.default  Cargo.toml
backend/src/: chat.rs  config.rs  main.rs  routes.rs
frontend/: .env.development  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx  index.css  vite-env.d.ts
frontend/src/components/Chat/: index.css  index.jsx  index.tsx
frontend/src/components/Header/: index.css  index.jsx  index.tsx
frontend/src/components/Message/: index.css  index.jsx  index.tsx
frontend/src/components/MessageInput/: index.css  index.jsx  index.tsx
frontend/src/hooks/: use-chat.ts
frontend/src/services/: configuration.service.ts
frontend/src/types/: configuration.type.ts  message.type.ts
