[package]
name = "backend"
license = "MIT"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
axum = { version = "0.6", features = ["macros", "ws"] }
